update changelog and cleanup